# serializer version: 1
# name: test_setup[AVR20][select.arcam_fmj_127_0_0_1_dolby_audio_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'movie',
        'music',
        'night',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_dolby_audio_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Dolby Audio mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Dolby Audio mode',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'dolby_audio',
    'unique_id': '456789abcdef-1-dolby_audio',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[AVR20][select.arcam_fmj_127_0_0_1_dolby_audio_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Arcam FMJ (127.0.0.1) Dolby Audio mode',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'movie',
        'music',
        'night',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_dolby_audio_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[AVR20][select.arcam_fmj_127_0_0_1_dolby_leveler-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'level_0',
        'level_1',
        'level_2',
        'level_3',
        'level_4',
        'level_5',
        'level_6',
        'level_7',
        'level_8',
        'level_9',
        'level_10',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_dolby_leveler',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Dolby leveler',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Dolby leveler',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'dolby_leveler',
    'unique_id': '456789abcdef-1-dolby_leveler',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[AVR20][select.arcam_fmj_127_0_0_1_dolby_leveler-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Arcam FMJ (127.0.0.1) Dolby leveler',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'level_0',
        'level_1',
        'level_2',
        'level_3',
        'level_4',
        'level_5',
        'level_6',
        'level_7',
        'level_8',
        'level_9',
        'level_10',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_dolby_leveler',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[AVR20][select.arcam_fmj_127_0_0_1_dynamic_range_compression-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'medium',
        'high',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_dynamic_range_compression',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Dynamic-range compression',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Dynamic-range compression',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'compression',
    'unique_id': '456789abcdef-1-compression',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[AVR20][select.arcam_fmj_127_0_0_1_dynamic_range_compression-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Arcam FMJ (127.0.0.1) Dynamic-range compression',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'medium',
        'high',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_dynamic_range_compression',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[AVR20][select.arcam_fmj_127_0_0_1_front_panel_display_brightness-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'l1',
        'l2',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_front_panel_display_brightness',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Front-panel display brightness',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Front-panel display brightness',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'display_brightness',
    'unique_id': '456789abcdef-1-display_brightness',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[AVR20][select.arcam_fmj_127_0_0_1_front_panel_display_brightness-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Arcam FMJ (127.0.0.1) Front-panel display brightness',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'l1',
        'l2',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_front_panel_display_brightness',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[AVR20][select.arcam_fmj_127_0_0_1_hdmi_output-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'out_1',
        'out_2',
        'out_1_2',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_hdmi_output',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'HDMI output',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'HDMI output',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'video_output_switching',
    'unique_id': '456789abcdef-1-video_output_switching',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[AVR20][select.arcam_fmj_127_0_0_1_hdmi_output-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Arcam FMJ (127.0.0.1) HDMI output',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'out_1',
        'out_2',
        'out_1_2',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_hdmi_output',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[AVR20][select.arcam_fmj_127_0_0_1_imax_enhanced_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'on',
        'auto',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_imax_enhanced_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'IMAX Enhanced mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'IMAX Enhanced mode',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'imax_enhanced',
    'unique_id': '456789abcdef-1-imax_enhanced',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[AVR20][select.arcam_fmj_127_0_0_1_imax_enhanced_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Arcam FMJ (127.0.0.1) IMAX Enhanced mode',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'on',
        'auto',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_imax_enhanced_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[AVR20][select.arcam_fmj_127_0_0_1_room_equalization-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'eq1',
        'eq2',
        'eq3',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_room_equalization',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Room equalization',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Room equalization',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'room_equalization',
    'unique_id': '456789abcdef-1-room_equalization',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[AVR20][select.arcam_fmj_127_0_0_1_room_equalization-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Arcam FMJ (127.0.0.1) Room equalization',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'eq1',
        'eq2',
        'eq3',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_room_equalization',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[AVR20][select.arcam_fmj_127_0_0_1_vfd_information-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'processing',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_vfd_information',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'VFD information',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'VFD information',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'display_info_type',
    'unique_id': '456789abcdef-1-display_info_type',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[AVR20][select.arcam_fmj_127_0_0_1_vfd_information-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Arcam FMJ (127.0.0.1) VFD information',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'processing',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_vfd_information',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[AVR20][select.arcam_fmj_127_0_0_1_zone_2_dolby_audio_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'movie',
        'music',
        'night',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_zone_2_dolby_audio_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Dolby Audio mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Dolby Audio mode',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'dolby_audio',
    'unique_id': '456789abcdef-2-dolby_audio',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[AVR20][select.arcam_fmj_127_0_0_1_zone_2_dolby_audio_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Arcam FMJ (127.0.0.1) Zone 2 Dolby Audio mode',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'movie',
        'music',
        'night',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_zone_2_dolby_audio_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[AVR20][select.arcam_fmj_127_0_0_1_zone_2_dolby_leveler-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'level_0',
        'level_1',
        'level_2',
        'level_3',
        'level_4',
        'level_5',
        'level_6',
        'level_7',
        'level_8',
        'level_9',
        'level_10',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_zone_2_dolby_leveler',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Dolby leveler',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Dolby leveler',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'dolby_leveler',
    'unique_id': '456789abcdef-2-dolby_leveler',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[AVR20][select.arcam_fmj_127_0_0_1_zone_2_dolby_leveler-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Arcam FMJ (127.0.0.1) Zone 2 Dolby leveler',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'level_0',
        'level_1',
        'level_2',
        'level_3',
        'level_4',
        'level_5',
        'level_6',
        'level_7',
        'level_8',
        'level_9',
        'level_10',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_zone_2_dolby_leveler',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[AVR20][select.arcam_fmj_127_0_0_1_zone_2_dynamic_range_compression-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'medium',
        'high',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_zone_2_dynamic_range_compression',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Dynamic-range compression',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Dynamic-range compression',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'compression',
    'unique_id': '456789abcdef-2-compression',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[AVR20][select.arcam_fmj_127_0_0_1_zone_2_dynamic_range_compression-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Arcam FMJ (127.0.0.1) Zone 2 Dynamic-range compression',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'medium',
        'high',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_zone_2_dynamic_range_compression',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[AVR20][select.arcam_fmj_127_0_0_1_zone_2_room_equalization-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'eq1',
        'eq2',
        'eq3',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_zone_2_room_equalization',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Room equalization',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Room equalization',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'room_equalization',
    'unique_id': '456789abcdef-2-room_equalization',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[AVR20][select.arcam_fmj_127_0_0_1_zone_2_room_equalization-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Arcam FMJ (127.0.0.1) Zone 2 Room equalization',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'eq1',
        'eq2',
        'eq3',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_zone_2_room_equalization',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[AVR20][select.arcam_fmj_127_0_0_1_zone_2_vfd_information-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'processing',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_zone_2_vfd_information',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'VFD information',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'VFD information',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'display_info_type',
    'unique_id': '456789abcdef-2-display_info_type',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[AVR20][select.arcam_fmj_127_0_0_1_zone_2_vfd_information-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Arcam FMJ (127.0.0.1) Zone 2 VFD information',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'processing',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_zone_2_vfd_information',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[AVR450][select.arcam_fmj_127_0_0_1_dolby_audio_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'movie',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_dolby_audio_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Dolby Audio mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Dolby Audio mode',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'dolby_audio',
    'unique_id': '456789abcdef-1-dolby_audio',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[AVR450][select.arcam_fmj_127_0_0_1_dolby_audio_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Arcam FMJ (127.0.0.1) Dolby Audio mode',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'movie',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_dolby_audio_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[AVR450][select.arcam_fmj_127_0_0_1_dolby_leveler-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'level_0',
        'level_1',
        'level_2',
        'level_3',
        'level_4',
        'level_5',
        'level_6',
        'level_7',
        'level_8',
        'level_9',
        'level_10',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_dolby_leveler',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Dolby leveler',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Dolby leveler',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'dolby_leveler',
    'unique_id': '456789abcdef-1-dolby_leveler',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[AVR450][select.arcam_fmj_127_0_0_1_dolby_leveler-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Arcam FMJ (127.0.0.1) Dolby leveler',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'level_0',
        'level_1',
        'level_2',
        'level_3',
        'level_4',
        'level_5',
        'level_6',
        'level_7',
        'level_8',
        'level_9',
        'level_10',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_dolby_leveler',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[AVR450][select.arcam_fmj_127_0_0_1_dynamic_range_compression-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'medium',
        'high',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_dynamic_range_compression',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Dynamic-range compression',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Dynamic-range compression',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'compression',
    'unique_id': '456789abcdef-1-compression',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[AVR450][select.arcam_fmj_127_0_0_1_dynamic_range_compression-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Arcam FMJ (127.0.0.1) Dynamic-range compression',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'medium',
        'high',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_dynamic_range_compression',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[AVR450][select.arcam_fmj_127_0_0_1_front_panel_display_brightness-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'l1',
        'l2',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_front_panel_display_brightness',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Front-panel display brightness',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Front-panel display brightness',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'display_brightness',
    'unique_id': '456789abcdef-1-display_brightness',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[AVR450][select.arcam_fmj_127_0_0_1_front_panel_display_brightness-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Arcam FMJ (127.0.0.1) Front-panel display brightness',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'l1',
        'l2',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_front_panel_display_brightness',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[AVR450][select.arcam_fmj_127_0_0_1_hdmi_output-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'out_1',
        'out_2',
        'out_1_2',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_hdmi_output',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'HDMI output',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'HDMI output',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'video_output_switching',
    'unique_id': '456789abcdef-1-video_output_switching',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[AVR450][select.arcam_fmj_127_0_0_1_hdmi_output-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Arcam FMJ (127.0.0.1) HDMI output',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'out_1',
        'out_2',
        'out_1_2',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_hdmi_output',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[AVR450][select.arcam_fmj_127_0_0_1_legacy_video_selection-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'bd',
        'sat',
        'av',
        'pvr',
        'vcr',
        'game',
        'stb',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_legacy_video_selection',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Legacy video selection',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Legacy video selection',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'video_selection',
    'unique_id': '456789abcdef-1-video_selection',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[AVR450][select.arcam_fmj_127_0_0_1_legacy_video_selection-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Arcam FMJ (127.0.0.1) Legacy video selection',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'bd',
        'sat',
        'av',
        'pvr',
        'vcr',
        'game',
        'stb',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_legacy_video_selection',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[AVR450][select.arcam_fmj_127_0_0_1_mpeg_noise_reduction-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'low',
        'medium',
        'high',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_mpeg_noise_reduction',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'MPEG noise reduction',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'MPEG noise reduction',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'video_mpeg_noise_reduction',
    'unique_id': '456789abcdef-1-video_mpeg_noise_reduction',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[AVR450][select.arcam_fmj_127_0_0_1_mpeg_noise_reduction-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Arcam FMJ (127.0.0.1) MPEG noise reduction',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'low',
        'medium',
        'high',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_mpeg_noise_reduction',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[AVR450][select.arcam_fmj_127_0_0_1_room_equalization-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'eq1',
        'eq2',
        'eq3',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_room_equalization',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Room equalization',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Room equalization',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'room_equalization',
    'unique_id': '456789abcdef-1-room_equalization',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[AVR450][select.arcam_fmj_127_0_0_1_room_equalization-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Arcam FMJ (127.0.0.1) Room equalization',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'eq1',
        'eq2',
        'eq3',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_room_equalization',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[AVR450][select.arcam_fmj_127_0_0_1_vfd_information-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'processing',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_vfd_information',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'VFD information',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'VFD information',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'display_info_type',
    'unique_id': '456789abcdef-1-display_info_type',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[AVR450][select.arcam_fmj_127_0_0_1_vfd_information-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Arcam FMJ (127.0.0.1) VFD information',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'processing',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_vfd_information',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[AVR450][select.arcam_fmj_127_0_0_1_video_film_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'auto',
        'off',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_video_film_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Video film mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Video film mode',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'video_film_mode',
    'unique_id': '456789abcdef-1-video_film_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[AVR450][select.arcam_fmj_127_0_0_1_video_film_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Arcam FMJ (127.0.0.1) Video film mode',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'auto',
        'off',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_video_film_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[AVR450][select.arcam_fmj_127_0_0_1_video_noise_reduction-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'low',
        'medium',
        'high',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_video_noise_reduction',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Video noise reduction',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Video noise reduction',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'video_noise_reduction',
    'unique_id': '456789abcdef-1-video_noise_reduction',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[AVR450][select.arcam_fmj_127_0_0_1_video_noise_reduction-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Arcam FMJ (127.0.0.1) Video noise reduction',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'low',
        'medium',
        'high',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_video_noise_reduction',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[AVR450][select.arcam_fmj_127_0_0_1_zone_2_dolby_audio_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'movie',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_zone_2_dolby_audio_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Dolby Audio mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Dolby Audio mode',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'dolby_audio',
    'unique_id': '456789abcdef-2-dolby_audio',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[AVR450][select.arcam_fmj_127_0_0_1_zone_2_dolby_audio_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Arcam FMJ (127.0.0.1) Zone 2 Dolby Audio mode',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'movie',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_zone_2_dolby_audio_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[AVR450][select.arcam_fmj_127_0_0_1_zone_2_dolby_leveler-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'level_0',
        'level_1',
        'level_2',
        'level_3',
        'level_4',
        'level_5',
        'level_6',
        'level_7',
        'level_8',
        'level_9',
        'level_10',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_zone_2_dolby_leveler',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Dolby leveler',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Dolby leveler',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'dolby_leveler',
    'unique_id': '456789abcdef-2-dolby_leveler',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[AVR450][select.arcam_fmj_127_0_0_1_zone_2_dolby_leveler-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Arcam FMJ (127.0.0.1) Zone 2 Dolby leveler',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'level_0',
        'level_1',
        'level_2',
        'level_3',
        'level_4',
        'level_5',
        'level_6',
        'level_7',
        'level_8',
        'level_9',
        'level_10',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_zone_2_dolby_leveler',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[AVR450][select.arcam_fmj_127_0_0_1_zone_2_dynamic_range_compression-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'medium',
        'high',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_zone_2_dynamic_range_compression',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Dynamic-range compression',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Dynamic-range compression',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'compression',
    'unique_id': '456789abcdef-2-compression',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[AVR450][select.arcam_fmj_127_0_0_1_zone_2_dynamic_range_compression-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Arcam FMJ (127.0.0.1) Zone 2 Dynamic-range compression',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'medium',
        'high',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_zone_2_dynamic_range_compression',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[AVR450][select.arcam_fmj_127_0_0_1_zone_2_room_equalization-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'eq1',
        'eq2',
        'eq3',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_zone_2_room_equalization',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Room equalization',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Room equalization',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'room_equalization',
    'unique_id': '456789abcdef-2-room_equalization',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[AVR450][select.arcam_fmj_127_0_0_1_zone_2_room_equalization-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Arcam FMJ (127.0.0.1) Zone 2 Room equalization',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'eq1',
        'eq2',
        'eq3',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_zone_2_room_equalization',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[AVR450][select.arcam_fmj_127_0_0_1_zone_2_vfd_information-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'processing',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_zone_2_vfd_information',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'VFD information',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'VFD information',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'display_info_type',
    'unique_id': '456789abcdef-2-display_info_type',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[AVR450][select.arcam_fmj_127_0_0_1_zone_2_vfd_information-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Arcam FMJ (127.0.0.1) Zone 2 VFD information',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'processing',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_zone_2_vfd_information',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[SA20][select.arcam_fmj_127_0_0_1_auto_shutdown_interval-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'disabled',
        'minutes_30',
        'hour_1',
        'hours_2',
        'hours_4',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_auto_shutdown_interval',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Auto-shutdown interval',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Auto-shutdown interval',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'auto_shutdown_control',
    'unique_id': '456789abcdef-1-auto_shutdown_control',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[SA20][select.arcam_fmj_127_0_0_1_auto_shutdown_interval-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Arcam FMJ (127.0.0.1) Auto-shutdown interval',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'disabled',
        'minutes_30',
        'hour_1',
        'hours_2',
        'hours_4',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_auto_shutdown_interval',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[SA20][select.arcam_fmj_127_0_0_1_dac_filter-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'linear_fast',
        'linear_slow',
        'minimum_fast',
        'minimum_slow',
        'brick_wall',
        'corrected_fast',
        'apodizing',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_dac_filter',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'DAC filter',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'DAC filter',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'dac_filter',
    'unique_id': '456789abcdef-1-dac_filter',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[SA20][select.arcam_fmj_127_0_0_1_dac_filter-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Arcam FMJ (127.0.0.1) DAC filter',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'linear_fast',
        'linear_slow',
        'minimum_fast',
        'minimum_slow',
        'brick_wall',
        'corrected_fast',
        'apodizing',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_dac_filter',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[SA20][select.arcam_fmj_127_0_0_1_front_panel_display_brightness-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'l1',
        'l2',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_front_panel_display_brightness',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Front-panel display brightness',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Front-panel display brightness',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'display_brightness',
    'unique_id': '456789abcdef-1-display_brightness',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[SA20][select.arcam_fmj_127_0_0_1_front_panel_display_brightness-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Arcam FMJ (127.0.0.1) Front-panel display brightness',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'l1',
        'l2',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_front_panel_display_brightness',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[SA20][select.arcam_fmj_127_0_0_1_processor_mode_input-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'disabled',
        'phono',
        'aux',
        'pvr',
        'av',
        'stb',
        'cd',
        'bd',
        'sat',
        'game',
        'net',
        'usb',
        'arc_erc',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_processor_mode_input',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Processor-mode input',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Processor-mode input',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'processor_mode_input',
    'unique_id': '456789abcdef-1-processor_mode_input',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[SA20][select.arcam_fmj_127_0_0_1_processor_mode_input-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Arcam FMJ (127.0.0.1) Processor-mode input',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'disabled',
        'phono',
        'aux',
        'pvr',
        'av',
        'stb',
        'cd',
        'bd',
        'sat',
        'game',
        'net',
        'usb',
        'arc_erc',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.arcam_fmj_127_0_0_1_processor_mode_input',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'disabled',
  })
# ---
